<resources>
    <string name="app_name">Payconiq</string>
    <string name="image_placeholder">Image Placeholder</string>
    <string name="empty_data">No results found for this query</string>
    <string name="reload">Reload</string>
    <string name="unable_load">Unable to load images</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="following_url">Following Url</string>
    <string name="follower_url">Follower Url</string>
    <string name="subscription_url">Subscription Url</string>
    <string name="html_url">Html Url</string>
    <string name="url">Url</string>
    <string name="avatar_url">Avatar Url</string>
    <string name="node_id">Node Id</string>
    <string name="id">Id</string>
    <string name="score">Score</string>
    <string name="type">Type</string>
    <string name="username">Username</string>
</resources>