<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/searchLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_height="match_parent" />


        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerFrameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/shimmer_placeholder_layout" />

                <include layout="@layout/shimmer_placeholder_layout" />

                <include layout="@layout/shimmer_placeholder_layout" />

                <include layout="@layout/shimmer_placeholder_layout" />

                <include layout="@layout/shimmer_placeholder_layout" />

                <include layout="@layout/shimmer_placeholder_layout" />

                <include layout="@layout/shimmer_placeholder_layout" />

                <include layout="@layout/shimmer_placeholder_layout" />

                <include layout="@layout/shimmer_placeholder_layout" />

                <include layout="@layout/shimmer_placeholder_layout" />
            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>

        <TextView
            android:id="@+id/text_view_error"
            android:visibility="gone"
            android:layout_above="@id/btnReload"
            android:text="@string/unable_load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <Button
            android:id="@+id/btnReload"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reload"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/textViewEmpty"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_data" />

    </RelativeLayout>
</layout>